BLOG/infra/k8s/client-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: client
spec:
  type: ClusterIP 
  selector:
    app: client
  ports:
    - name: client
      protocol: TCP
      port: 80
      targetPort: 80
